agregado de paleta y su movimiento

--- a/Final_Desarrollo1/Final_Desarrollo1/Final_Desarrollo1.vcxproj
+++ b/Final_Desarrollo1/Final_Desarrollo1/Final_Desarrollo1.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Pause.cpp" />
+    <ClCompile Include="Rect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Credits.h" />
@@ -164,6 +165,7 @@
     <ClInclude Include="Gameplay.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Pause.h" />
+    <ClInclude Include="Rect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
