agregado de powerup "piso"
al agarrar este powerup se dibuja un rectangulo del tamaño del ancho de la pantalla abajo de la misma. Si la pelota colisiona con este rectangulo, se invierte su velocidad en Y

--- a/Final_Desarrollo1/Final_Desarrollo1/Final_Desarrollo1.vcxproj
+++ b/Final_Desarrollo1/Final_Desarrollo1/Final_Desarrollo1.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Credits.cpp" />
     <ClCompile Include="EnlargePaddlePowerUp.cpp" />
+    <ClCompile Include="FloorPowerUp.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="Gameplay.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Credits.h" />
     <ClInclude Include="EnlargePaddlePowerUp.h" />
+    <ClInclude Include="FloorPowerUp.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameOver.h" />
     <ClInclude Include="Gameplay.h" />
