--- a/Final_Desarrollo1/Final_Desarrollo1/Final_Desarrollo1.vcxproj.filters
+++ b/Final_Desarrollo1/Final_Desarrollo1/Final_Desarrollo1.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="ShootsPowerUp.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="FloorPowerUp.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
@@ -102,6 +105,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="ShootsPowerUp.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="FloorPowerUp.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
